# script-track

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  ffmpeg-export.md  mvp-checklist.md  transcript-ui.md  whisper-integration.md
app/: ARCHITECTURE.md  README.md  package-lock.json  package.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/types/: index.ts
app/src/utils/: fileUtils.ts  silenceUtils.ts  transcriptUtils.ts
core/: README.md  package.json
data/: README.md
docs/: README.md
engine/: README.md  package.json
samples/: README.md
